--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .center{
           text-align: center;
         }
-      </style><p></p><p class="center"><img src="/landings/192279/1591687891/images/oie_eMAQpzb6D1x7.png" alt=""></p><section id="main"><header><span class="avatar"><img src="https://s9.gifyu.com/images/Sawg5.gif" alt="" width="200px"></span><h1>
+      </style><p></p><p class="center"><img src="/landings/192279/1591687891/images/oie_eMAQpzb6D1x7.png" alt=""></p><section id="main"><header><span class="avatar"><img src="https://s12.gifyu.com/images/ezgif.com-video-to-gif-2a605c7ffe7893ec7.gif" alt="" width="200px"></span><h1>
             NO NEED TO PAY                                       
           </h1><p><b>
               THIS WEBSITE IS FREE                                           
